<resources>
    <string name="app_name">MedBox</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="bem_vindo">Bem Vindo</string>
    <string name="adicionar_medicamento">Adicionar\nMedicamento</string>
    <string name="adicionar_medicamento_add">Adicionar Medicamento</string>
    <string name="adicionar_medicamento_list">Listar Medicamento</string>
    <string name="adicionar_medicamento_edit">Editar Medicamento</string>
    <string name="listar_medicamento">Listar\nMedicamento</string>
    <string name="adicionar_medicamento_detail">Detalhes do Medicamento</string>
    <string name="nome_do_medicamento">Nome do medicamento</string>
    <string name="open_medbox">Abrir o MedBox</string>
    <string name="quantidade">Quantidade:</string>
    <string name="save">Salvar</string>
    <string name="edit">Editar</string>
    <string name="delete">Deletar</string>
    <string name="restante">Restante: %s</string>
</resources>